plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.6'
	id 'io.spring.dependency-management' version '1.1.7'
    id 'maven-publish'
}

group = 'eu.invouk'
version = '0.0.1-SNAPSHOT'
description = 'Nexus chunk is web for minecraft servers.'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(25)
	}
}

bootJar {
    // NAHRADTE TENTO PRIKLAD SKUTOCNOU CESTOU (napr. eu.invouk.nexuschunk.NexusChunkApplication)
    mainClass = 'eu.invouk.nexuschunk.NexuschunkApplication'
}

publishing {
    publications {
        mavenJava(MavenPublication) {
            // Ak je to štandardný Spring Boot projekt, mal by to stačiť
            from components.java

            // Nastavte ID artefaktu, ktoré sa bude používať
            groupId = 'sk.invouk' as Publication       // Zmeňte na svoje Group ID
            artifactId = 'nexuschunk' as Publication // Zmeňte na svoje Artifact ID
            version = '0.0.1-SNAPSHOT' as Publication // Zmeňte na vašu verziu (alebo použite project.version)
        }
    }
    repositories {
        maven {
            name = "GitHubPackages"
            url = "https://maven.pkg.github.com/Invouk/NexusChunk" // Změňte ${owner} a ${repository}
            credentials {
                username = System.getenv("USERNAME") // Zde se to napojí na env var z workflow
                password = System.getenv("TOKEN")    // Zde se to napojí na env var z workflow
            }
        }
    }
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-mail'
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-authorization-server'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'

    implementation 'com.github.ben-manes.caffeine:caffeine'
	//runtimeOnly 'com.h2database:h2'
	runtimeOnly 'org.mariadb.jdbc:mariadb-java-client'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.security:spring-security-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    //google guava
    implementation("com.google.guava:guava:33.5.0-jre")
}

tasks.named('test') {
	useJUnitPlatform()
}
